# dj-polare-pgd

./: Pipfile  README.md  pyproject.toml  readme.md  tasks.py
projeto/: api.py  urls.py  views.py  whitenoise.py
projeto/apps/arquitetura/: views.py
projeto/apps/polare/: api.py  apps.py  exceptions.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
projeto/apps/polare/management/commands/: corrigir_planos_individuais.py  enviar_dados.py
projeto/apps/polare/migrations/: 0001_initial.py  0002_edital_planogerencialunidade.py
projeto/assets/app/css/material/: app-material.min.css  app-material.min.css.map  bootstrap-material.min.css  bootstrap-material.min.css.map
projeto/assets/app/js/: app.js  app.min.js
projeto/settings/: __init__.py  base.py
projeto/templates/: .gitkeep  403.html  404.html  500.html  app.html  base.html
projeto/templates/_includes/: barra_esquerda.html  breadcrumbs.html  navbar.html  navegacao.html  paginador.html
projeto/templates/account/: login.html  password_reset.html  password_reset_done.html  signup.html  verification_sent.html
projeto/templates/polare/: home.html
projeto/templates/polare/entregas/: entrega_detalhe.html
projeto/templates/polare/relatorios/: quantitativo_detalhe.html  quantitativo_geral.html
