[tool.poetry]
name = "dj-polare-pgd"
version = "0.1.0"
description = ""
authors = ["Igor Carvalho"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Django = "*"
Pillow = "*"
WeasyPrint = "*"
aiohttp = "*"
arrow = "*"
celery = "*"
coreapi = "*"
django-allauth = "*"
django-auditlog = "*"
django-celery-beat = "*"
django-celery-results = "*"
django-environ = "*"
django-extensions = "*"
django-extra-fields = "*"
django-filter = "*"
django-formtools = "*"
django-hijack = "*"
django-model-utils = "*"
django-post_office = "*"
django-rest-auth = "*"
django-view-breadcrumbs = "*"
django-weasyprint = "*"
django-widget-tweaks = "*"
djangorestframework = "*"
gunicorn = "*"
hiredis = "*"
invoke = "*"
psycopg2-binary = "*"
pyinvoke = "*"
redis = "*"
whitenoise = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
bpython = "*"
coverage = "*"
django-debug-toolbar = "*"
fabric = "*"
factory_boy = "*"
flake8 = "*"
halo = "*"
isort = "*"
pyopenssl = "*"
selenium = "*"
werkzeug = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
